--- a/frontend/src/pages/Error/components/ErrorTitle/ErrorTitle.module.scss
+++ b/frontend/src/pages/Error/components/ErrorTitle/ErrorTitle.module.scss
@@ -26,4 +26,15 @@
     > button {
         margin-left: auto;
     }
+
+    > .secondRow {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
+
+.createIssueContainer {
+    align-items: right;
+    display: flex;
 }
