[HIG-2113] show active network requests
show which network and console events are currently
active based on the player time. shows the event times in the resource page as well.
when clicking the player timeline, ensure the network events  jump
to the appropriate timeframe.

--- a/frontend/src/pages/Player/Toolbar/DevToolsWindow/ResourcePage/ResourcePage.module.scss
+++ b/frontend/src/pages/Player/Toolbar/DevToolsWindow/ResourcePage/ResourcePage.module.scss
@@ -1,4 +1,4 @@
-$columns: 50px 50px 50% 1fr;
+$columns: 50px 50px 60% 1fr 3fr;
 $right-padding: 12px;
 
 .networkRow {
@@ -15,6 +15,9 @@ $right-padding: 12px;
     width: 100%;
 
     &.current {
+        border: 1px solid var(--color-green-500);
+        border-radius: 8px;
+        margin-bottom: 1px;
         p,
         div,
         span {
