New onboarding flow to include backend (#2391)
* Setup for backend

* Populated backend content

* Updated setup page

* Fixed styling

* Made style changes and finished integrations section

* Made button style fixes

* Reinstated project page buttons

* Added backend installation verification

* Removed unnecessary check

* Included frontend flag

* Addressed PR comments

--- a/frontend/src/components/Button/ButtonLink/ButtonLink.module.scss
+++ b/frontend/src/components/Button/ButtonLink/ButtonLink.module.scss
@@ -5,10 +5,10 @@
     color: var(--color-white) !important;
     display: block;
     font-family: var(--header-font-family);
-    padding-bottom: var(--size-xSmall);
+    padding-bottom: var(--size-xxSmall);
     padding-left: var(--size-medium);
     padding-right: var(--size-medium);
-    padding-top: var(--size-xSmall);
+    padding-top: var(--size-xxSmall);
     text-align: center;
     width: max-content;
 
