--- a/frontend/src/components/Steps/Steps.module.scss
+++ b/frontend/src/components/Steps/Steps.module.scss
@@ -95,6 +95,8 @@
 
     > button {
         margin: 0 !important;
+        padding-bottom: var(--size-xxSmall);
+        padding-top: var(--size-xxSmall);
     }
 
     .nextButton {
