--- a/frontend/src/pages/Setup/SetupPage.module.scss
+++ b/frontend/src/pages/Setup/SetupPage.module.scss
@@ -5,7 +5,7 @@
 
 .headingWrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
 }
 
 .platformOption {
@@ -70,4 +70,91 @@
     justify-content: space-between;
     padding: var(--size-medium) 0;
     padding-bottom: 0;
+}
+
+.fieldsBox {
+    border: 1px solid var(--color-gray-300);
+    border-radius: 8px;
+    width: 100%;
+
+    h3 {
+        border-bottom: 1px solid var(--color-gray-300);
+        font-size: 18px;
+        padding: var(--size-small) var(--size-large);
+    }
+}
+
+.flexLayout {
+    display: flex;
+}
+
+.leftColumn {
+    flex: 0 0 300px;
+    height: 50vh;
+    padding-right: var(--size-xLarge);
+    position: sticky;
+    top: 120px;
+}
+
+.checkWrapper {
+    align-items: center;
+    border-radius: 50%;
+    display: flex;
+    height: 20px;
+    justify-content: center;
+    padding: 3px;
+    width: 20px;
+
+    &.checkWrapperIncomplete {
+        background-color: var(--color-gray-400);
+    }
+
+    &.checkWrapperCompleted {
+        background-color: var(--color-green-400);
+    }
+}
+
+:global(.ant-spin),
+:global(svg),
+.loadingIcon {
+    height: var(--size);
+    width: var(--size);
+}
+
+.loadingIcon {
+    color: var(--color-gray-600);
+}
+
+.checkIcon {
+    color: var(--text-primary-inverted);
+    fill: var(--text-primary-inverted);
+    height: 10px;
+    width: 10px;
+}
+
+.setupStepsContainer {
+    color: var(--text-primary);
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    padding: var(--size-xSmall) var(--size-large);
+    row-gap: var(--size-small);
+
+    li {
+        align-items: center;
+        color: var(--text-primary);
+        column-gap: var(--size-xSmall);
+        cursor: pointer;
+        display: flex;
+        height: var(--size-large);
+        padding-bottom: var(--size-xSmall);
+        padding-left: 0;
+        padding-right: 0;
+        padding-top: var(--size-xSmall);
+        width: 100%;
+    }
+
+    .selected {
+        font-weight: 500;
+    }
 }
