--- a/frontend/src/pages/WorkspaceSettings/DangerForm/DangerForm.module.scss
+++ b/frontend/src/pages/WorkspaceSettings/DangerForm/DangerForm.module.scss
@@ -8,7 +8,8 @@
 .deleteButton {
     background-color: var(--color-red-400);
     margin-left: 15px;
-    padding: 0 30px;
+    padding-left: 30px;
+    padding-right: 30px;
     width: max-content;
 }
 
