--- a/frontend/src/pages/Error/components/ErrorRightPanel/components/NoActiveErrorCard/NoActiveErrorCard.module.scss
+++ b/frontend/src/pages/Error/components/ErrorRightPanel/components/NoActiveErrorCard/NoActiveErrorCard.module.scss
@@ -1,6 +1,8 @@
 .buttonWrapper {
     column-gap: var(--size-small);
     display: flex;
+    padding-bottom: var(--size-xxSmall);
+    padding-top: var(--size-xxSmall);
 }
 
 .card {
