--- a/frontend/src/pages/Error/ErrorPage.module.scss
+++ b/frontend/src/pages/Error/ErrorPage.module.scss
@@ -320,3 +320,9 @@
 .titleContainer {
     margin-bottom: var(--size-large);
 }
+
+.rightButtonsContainer {
+    display: grid;
+    grid-column-gap: 10px;
+    grid-template-columns: auto auto;
+}
