--- a/frontend/src/pages/Error/ErrorPage.module.scss
+++ b/frontend/src/pages/Error/ErrorPage.module.scss
@@ -53,7 +53,7 @@
 }
 
 .errorPage {
-    --right-panel-width: 325px;
+    --right-panel-width: 375px;
     --left-panel-width: 475px;
     --top-padding: 120px;
 
@@ -100,7 +100,6 @@
     display: flex;
     font-weight: 200;
     padding: 10px;
-    padding-bottom: 10px;
     width: 100%;
 }
 
@@ -301,6 +300,11 @@
     @include rounded-border;
     margin-bottom: var(--size-small);
     padding: var(--size-small);
+
+    &.deepLinked {
+        border: 1px solid var(--color-purple);
+        box-shadow: 0 0 9px rgba(86, 41, 198, 0.25);
+    }
 }
 
 .titleWithAction {
