fix comments scroll list

--- a/frontend/src/components/FullCommentList/FullCommentList.module.scss
+++ b/frontend/src/components/FullCommentList/FullCommentList.module.scss
@@ -21,6 +21,10 @@
     }
 }
 
+.firstComment {
+    margin-top: var(--size-xSmall);
+}
+
 .noCommentsContainer {
     align-items: center;
     display: flex;
