--- a/frontend/src/pages/Error/components/ErrorRightPanel/ErrorRightPanel.module.scss
+++ b/frontend/src/pages/Error/components/ErrorRightPanel/ErrorRightPanel.module.scss
@@ -10,7 +10,7 @@
         display: flex;
         flex-direction: column;
         height: 100%;
-        padding: var(--size-medium) 0;
+        padding: 0;
 
         .createCommentContainer {
             margin-top: auto;
