--- a/frontend/src/components/Button/GoToButton/index.module.scss
+++ b/frontend/src/components/Button/GoToButton/index.module.scss
@@ -25,3 +25,21 @@ $go-to-button-width: 63px;
     margin-left: var(--size-xSmall);
     width: auto;
 }
+
+.small {
+    filter: brightness(0) saturate(100%);
+    height: 1em;
+    margin-left: 0;
+    transform: scale(1.2);
+    width: 1em;
+}
+
+.smallIconContainer {
+    align-items: center;
+    height: var(--size-large);
+    justify-content: center;
+
+    &:hover {
+        background: var(--color-gray-300);
+    }
+}
