make header line span full width

--- a/frontend/src/components/Comment/CommentHeader.module.scss
+++ b/frontend/src/components/Comment/CommentHeader.module.scss
@@ -96,4 +96,8 @@
     height: 28px;
     justify-content: flex-end;
     margin-bottom: 8px;
+    margin-left: -20px;
+    padding-left: 20px;
+    padding-right: 26px;
+    width: 115%;
 }
