--- a/frontend/src/components/Comment/CommentHeader.module.scss
+++ b/frontend/src/components/Comment/CommentHeader.module.scss
@@ -101,3 +101,10 @@
     padding-right: 26px;
     width: 115%;
 }
+
+.errorTopBar {
+    margin-left: -12px;
+    padding-left: 20px;
+    padding-right: 26px;
+    width: 109%;
+}
