--- a/frontend/src/pages/Player/Toolbar/Toolbar.module.scss
+++ b/frontend/src/pages/Player/Toolbar/Toolbar.module.scss
@@ -201,16 +201,17 @@
     display: flex;
     flex-direction: row-reverse;
     flex-wrap: wrap;
-    height: 42px;
+    height: 100%;
     justify-content: flex-start;
     margin-left: auto;
     overflow-y: hidden;
 
-    > * {
+    button {
         height: fit-content;
+        margin-bottom: 6px;
         margin-left: var(--size-xxSmall);
         margin-right: var(--size-xxSmall);
-        margin-top: 8px;
+        margin-top: 6px;
     }
 }
 
