--- a/frontend/src/pages/Billing/BillingPlanCard/BillingPlanCard.module.scss
+++ b/frontend/src/pages/Billing/BillingPlanCard/BillingPlanCard.module.scss
@@ -62,10 +62,7 @@
 .button {
     justify-content: center;
     margin-top: auto;
-}
-
-.button {
-    justify-content: center;
+    padding: var(--size-xSmall) var(--size-medium);
 }
 
 .currentPlan {
