fix error comments button

--- a/frontend/src/pages/Error/components/ErrorRightPanel/ErrorRightPanel.module.scss
+++ b/frontend/src/pages/Error/components/ErrorRightPanel/ErrorRightPanel.module.scss
@@ -14,8 +14,7 @@
 
         .createCommentContainer {
             margin-top: auto;
-            padding: 0 var(--size-large);
-            padding-top: var(--size-xLarge);
+            padding: var(--size-medium) var(--size-medium);
         }
     }
 }
