--- a/frontend/src/components/Comment/ReplyList/ReplyList.module.scss
+++ b/frontend/src/components/Comment/ReplyList/ReplyList.module.scss
@@ -1,8 +1,8 @@
 @import 'src/static/shared.scss';
 
 .repliesList {
-    margin-bottom: 1rem;
-    margin-top: 1rem;
+    margin-bottom: 0;
+    margin-top: 0;
 }
 
 .record {
