[HIG-2184] add firebase password reset
Adds a `Forgot Password?` to the login page that sends a Firebase email.

--- a/frontend/src/pages/Login/Login.module.scss
+++ b/frontend/src/pages/Login/Login.module.scss
@@ -77,3 +77,23 @@
     row-gap: var(--size-medium);
     width: 100%;
 }
+
+.resetPasswordText {
+    margin: 0.75em !important;
+    opacity: 0;
+    text-align: left;
+    transition: opacity 1.0s ease-in-out;
+    width: 100%;
+}
+
+.canResetPasswordText {
+    opacity: 1;
+
+    &:hover {
+        text-decoration: underline;
+    }
+
+    &:active &:focus {
+        border: #1d4ed8 1px solid;
+    }
+}
