[HIG-2184] add firebase password reset (#2488)
Adds a `Forgot Password?` to the login page that sends a Firebase email.

--- a/frontend/src/pages/Login/Login.module.scss
+++ b/frontend/src/pages/Login/Login.module.scss
@@ -77,3 +77,13 @@
     row-gap: var(--size-medium);
     width: 100%;
 }
+
+.resetPasswordText {
+    margin: 0.75em !important;
+    text-align: left;
+    width: 100%;
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
