[HIG-2200] improve forgot password form
* make text style consistent with other form selectors
* make a simplified input for reset

--- a/frontend/src/pages/Login/Login.module.scss
+++ b/frontend/src/pages/Login/Login.module.scss
@@ -79,11 +79,8 @@
 }
 
 .resetPasswordText {
-    margin: 0.75em !important;
+    align-self: flex-start;
+    margin: 0.5em 0;
+    padding: 0;
     text-align: left;
-    width: 100%;
-
-    &:hover {
-        text-decoration: underline;
-    }
 }
