--- a/frontend/src/components/ErrorState/ErrorState.module.scss
+++ b/frontend/src/components/ErrorState/ErrorState.module.scss
@@ -27,3 +27,9 @@
     color: var(--color-purple);
     cursor: pointer;
 }
+
+.loggedInButtonGroup {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
