--- a/frontend/src/pages/Player/Toolbar/NewCommentForm/CommentTextBody/CommentTextBody.module.css
+++ b/frontend/src/pages/Player/Toolbar/NewCommentForm/CommentTextBody/CommentTextBody.module.css
@@ -32,7 +32,7 @@
 
 .mentions--multiLine .mentions__input {
     border: 1px solid transparent;
-    color: var(--color-gray-500);
+    color: var(--color-text-primary);
     cursor: inherit;
     font-weight: 400;
     outline: 0;
@@ -45,7 +45,7 @@
 }
 
 .mentions__input::placeholder {
-    color: var(--color-gray-500) !important;
+    color: var(--color-text-primary) !important;
 }
 
 .mentions__suggestions__list {
@@ -74,11 +74,13 @@
 }
 
 .mentions__mention {
-    color: var(--color-purple-400);
-    font-weight: 300 !important;
+    color: var(--color-link);
+    font-weight: 400 !important;
     pointer-events: none;
     position: relative;
     z-index: 1;
+    text-shadow: 1px 1px 1px white, 1px -1px 1px white, -1px 1px 1px white,
+    -1px -1px 1px white;
 }
 
 .mentionedUser {
