make all comment text gray

--- a/frontend/src/pages/Player/Toolbar/NewCommentForm/CommentTextBody/CommentTextBody.module.css
+++ b/frontend/src/pages/Player/Toolbar/NewCommentForm/CommentTextBody/CommentTextBody.module.css
@@ -32,7 +32,7 @@
 
 .mentions--multiLine .mentions__input {
     border: 1px solid transparent;
-    color: var(--color-text-primary);
+    color: var(--color-gray-500);
     cursor: inherit;
     font-weight: 400;
     outline: 0;
@@ -85,4 +85,8 @@
 
 .mentionedUser {
     color: var(--color-link);
+}
+
+.commentText {
+    color: var(--color-gray-500)
 }
