[HIG-2241] improve new workspace auto join domain selector
On workspace creation, make the auto-join setting on by default
with the admin's email domain (if they use a domain other than gmail,yahoo,hotmail).
Show the domain to provide confirmation of the feature with a tooltip that
describes what this does.

--- a/frontend/src/pages/WorkspaceTeam/components/AutoJoinForm.module.scss
+++ b/frontend/src/pages/WorkspaceTeam/components/AutoJoinForm.module.scss
@@ -14,4 +14,8 @@
 
 .select {
     width: 100%;
+
+  &:global(.ant-select-disabled .ant-select-selector) {
+    background-color: var(--color-primary-background) !important;
+  }
 }
