--- a/frontend/src/pages/Errors/ErrorFeedV2/ErrorFeedV2.module.scss
+++ b/frontend/src/pages/Errors/ErrorFeedV2/ErrorFeedV2.module.scss
@@ -95,6 +95,10 @@
     }
 }
 
+.feedItems {
+    flex: 1 0 auto;
+}
+
 .fixedContent {
     align-items: center;
     display: flex;
@@ -205,4 +209,19 @@
     @media screen and (max-width: 1200px) {
         flex-direction: column;
     }
+}
+
+.pageButtonsRow {
+    flex-shrink: 0;
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    padding-bottom: var(--size-large);
+}
+
+.pageButtonsContainer {
+    display: grid;
+    gap: var(--size-xSmall);
+    grid-template-columns: 1fr 1fr;
+    width: auto;
 }
