improve scrollable feeds UI

--- a/frontend/src/components/Pagination/Pagination.module.scss
+++ b/frontend/src/components/Pagination/Pagination.module.scss
@@ -3,6 +3,7 @@
   display: flex;
   width: 100%;
   justify-content: flex-end;
+  margin-top: var(--size-medium);
   padding-bottom: var(--size-large);
 }
 
