[HIG-2173] gate enhanced user details on >= startup tier (#2549)
If a workspace is < startup tier, the backend will no longer return
enhanced details but will return an error. The frontend will display
blurred placeholder details with a tooltip describing the plan requirement.

--- a/frontend/src/pages/Player/MetadataBox/MetadataBox.module.scss
+++ b/frontend/src/pages/Player/MetadataBox/MetadataBox.module.scss
@@ -222,3 +222,13 @@
     right: var(--size-medium);
     top: var(--size-medium);
 }
+
+.blurred {
+    filter: blur(4px);
+}
+
+.enhancedLinksGrid {
+    display: grid;
+    grid-auto-rows: 20px;
+    grid-template-columns: 1fr 1fr;
+}
