--- a/frontend/src/components/Histogram/Histogram.module.scss
+++ b/frontend/src/components/Histogram/Histogram.module.scss
@@ -10,7 +10,7 @@
     padding: var(--size-xSmall) 0;
     position: relative;
     width: 100%;
-    z-index: 999999;
+    z-index: 2;
 
     .graphContainer {
         margin: 0 auto;
@@ -29,9 +29,9 @@
     background-color: var(--color-primary-background);
     border: 1px solid var(--color-gray-300);
     border-radius: var(--border-radius);
-    box-shadow: var(--box-shadow);
     color: var(--text-primary) !important;
     padding: var(--size-small) 0 !important;
+    transition: scale 0.2s ease-in-out;
 
     > * {
         padding-left: var(--size-medium) !important;
