--- a/frontend/src/pages/Player/Toolbar/Toolbar.module.scss
+++ b/frontend/src/pages/Player/Toolbar/Toolbar.module.scss
@@ -433,8 +433,11 @@
     border: 2px solid rgba(var(--color-yellow-300), 0.5);
     border-radius: 10px;
     height: 8px;
-    opacity: 0.8;
-    pointer-events: none;
     position: absolute;
     top: -40px;
+    z-index: 999999999;
+}
+
+.zoomAreaCanReset {
+    cursor: pointer;
 }
