--- a/frontend/src/components/Pagination/Pagination.module.scss
+++ b/frontend/src/components/Pagination/Pagination.module.scss
@@ -2,8 +2,10 @@
     display: flex;
     flex-shrink: 0;
     justify-content: flex-end;
+    left: 0;
     margin-top: var(--size-medium);
-    padding-bottom: var(--size-large);
+    position: absolute;
+    top: 86vh;
     width: 100%;
 }
 
