--- a/frontend/src/pages/Error/components/ErrorSearchPanel/ErrorSearchPanel.module.scss
+++ b/frontend/src/pages/Error/components/ErrorSearchPanel/ErrorSearchPanel.module.scss
@@ -1,3 +1,5 @@
+@import 'src/static/shared.scss';
+
 .errorSearchPanel {
     background: var(--color-primary-background);
     border-right: 1px solid var(--color-gray-300);
@@ -38,4 +40,11 @@
     &.hidden {
         right: calc(-1 * (var(--sidebar-width) - var(--size-xLarge)));
     }
+}
+
+.searchContainer {
+    @include hide-scrollbar;
+    max-height: 83vh;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
