[HIG-2258] make clearbit an opt-in integration (#2569)
Make clearbit opt-in per workspace.

--- a/frontend/src/pages/Player/MetadataBox/MetadataBox.module.scss
+++ b/frontend/src/pages/Player/MetadataBox/MetadataBox.module.scss
@@ -232,3 +232,7 @@
     grid-auto-rows: 20px;
     grid-template-columns: 1fr 1fr;
 }
+
+.enableClearbit {
+    padding: var(--size-medium) 22px;
+}
