--- a/frontend/src/pages/Billing/Billing.module.scss
+++ b/frontend/src/pages/Billing/Billing.module.scss
@@ -7,6 +7,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     gap: var(--size-large);
+    padding-bottom: var(--size-xLarge);
 }
 
 .detailsCard {
