--- a/frontend/src/pages/Billing/BillingPlanCard/BillingPlanCard.module.scss
+++ b/frontend/src/pages/Billing/BillingPlanCard/BillingPlanCard.module.scss
@@ -69,3 +69,23 @@
     border-color: var(--color-purple);
     box-shadow: 0 5px 8px rgba(86, 41, 198, 0.2);
 }
+
+.glowingPlan {
+    animation: pulse 2s ease-out infinite;
+    border-color: var(--color-green-400);
+    box-shadow: 0 8px 32px rgba(52, 211, 153, 0.2);
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(0.95);
+    }
+
+    50% {
+        transform: scale(1);
+    }
+
+    100% {
+        transform: scale(0.95);
+    }
+}
