[HIG-2281] improve enhanced user data styling
Fix custom full name overlapping with other details.
Show enhanced avatar in place of default when it exists.

--- a/frontend/src/pages/Player/MetadataBox/MetadataBox.module.scss
+++ b/frontend/src/pages/Player/MetadataBox/MetadataBox.module.scss
@@ -8,7 +8,7 @@
     max-width: var(--right-panel-width);
     position: relative;
 }
-.enhancedAvatar {
+.avatar {
     height: 36px;
     width: 36px;
 }
@@ -40,10 +40,7 @@
 }
 
 .userEnhanced {
-    column-gap: 14px;
-    display: grid;
-    grid-template-columns: fit-content(20px) auto;
-    padding: 20px;
+    padding: 16px 28px;
     position: relative;
 }
 
