--- a/frontend/src/components/Histogram/Histogram.module.scss
+++ b/frontend/src/components/Histogram/Histogram.module.scss
@@ -5,7 +5,7 @@
     display: flex;
     height: 62px;
     margin: 0 auto;
-    margin-bottom: var(--size-medium);
+    margin-bottom: var(--size-xxLarge);
     padding: var(--size-xSmall) 0;
     position: relative;
     width: 100%;
