--- a/frontend/src/components/Pagination/Pagination.module.scss
+++ b/frontend/src/components/Pagination/Pagination.module.scss
@@ -5,7 +5,7 @@
     left: 0;
     margin-top: var(--size-medium);
     position: absolute;
-    top: 86vh;
+    top: calc(100vh - 150px);
     width: 100%;
 }
 
