--- a/frontend/src/pages/Billing/Billing.module.scss
+++ b/frontend/src/pages/Billing/Billing.module.scss
@@ -83,3 +83,13 @@
 .annualToggleAltText {
     color: var(--color-gray-500);
 }
+
+.subtotal {
+    color: var(--color-purple-600);
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.billingIssues {
+    font-size: 18px;
+}
