[HIG-2301] add phone number to about you page
Record a new extra field 'phone' for admins.

Collected via about you page if it isn't set for the admin model.

--- a/frontend/src/pages/AboutYou/AboutYouPage.module.scss
+++ b/frontend/src/pages/AboutYou/AboutYouPage.module.scss
@@ -24,3 +24,9 @@
     column-gap: var(--size-large);
     display: flex;
 }
+
+.name {
+    display: grid;
+    grid-gap: var(--size-medium);
+    grid-template-columns: 1fr 1fr;
+}
