[HIG-2298] use consistent buttonlink padding
make padding (and hence height) consistent with default button.

--- a/frontend/src/components/Button/ButtonLink/ButtonLink.module.scss
+++ b/frontend/src/components/Button/ButtonLink/ButtonLink.module.scss
@@ -5,10 +5,10 @@
     color: var(--color-white) !important;
     display: block;
     font-family: var(--header-font-family);
-    padding-bottom: var(--size-xxSmall);
+    padding-bottom: var(--size-xSmall);
     padding-left: var(--size-medium);
     padding-right: var(--size-medium);
-    padding-top: var(--size-xxSmall);
+    padding-top: var(--size-xSmall);
     text-align: center;
     width: max-content;
 
