--- a/frontend/src/components/Histogram/Histogram.module.scss
+++ b/frontend/src/components/Histogram/Histogram.module.scss
@@ -5,8 +5,7 @@
     display: flex;
     height: 62px;
     margin: 0 auto;
-    margin-bottom: var(--size-xxLarge);
-    padding: var(--size-xSmall) 0;
+    padding: var(--size-xSmall) var(--size-medium);
     position: relative;
     width: 100%;
     z-index: 2;
