--- a/frontend/src/components/Histogram/Histogram.module.scss
+++ b/frontend/src/components/Histogram/Histogram.module.scss
@@ -1,15 +1,14 @@
 .container {
-    animation: enter 0.2s forwards;
     background: var(--color-primary-background);
     border: 1px solid var(--color-gray-300);
     border-radius: var(--border-radius);
     display: flex;
     height: 62px;
     margin: 0 auto;
-    margin-bottom: var(--size-medium);
-    padding: var(--size-xSmall) 0;
+    padding: var(--size-xSmall) var(--size-medium);
     position: relative;
     width: 100%;
+    z-index: 2;
 
     .graphContainer {
         margin: 0 auto;
@@ -24,12 +23,44 @@
     }
 }
 
-@keyframes enter {
-    0% {
-        transform: translateY(100px);
+.tooltipPopover {
+    background-color: var(--color-primary-background);
+    border: 1px solid var(--color-gray-300);
+    border-radius: var(--border-radius);
+    color: var(--text-primary) !important;
+    padding: var(--size-small) 0 !important;
+    transition: scale 0.2s ease-in-out;
+
+    > * {
+        padding-left: var(--size-medium) !important;
+        padding-right: var(--size-medium) !important;
     }
 
-    100% {
-        transform: translateY(0);
+    > h4 {
+        border-bottom: 1px solid var(--color-gray-300);
+        font-family: var(--header-font-family);
+        font-size: 13px !important;
+        margin-bottom: var(--size-small) !important;
+        padding-bottom: var(--size-xSmall);
     }
+
+    > p {
+        color: var(--color-gray-500) !important;
+        font-size: 14px !important;
+        margin: 0 !important;
+    }
+}
+
+.popoverContent {
+    max-height: 300px;
+    overflow: hidden;
+    overflow-wrap: anywhere;
+    overflow-y: auto;
+    text-overflow: ellipsis;
+}
+
+.title {
+    column-gap: var(--size-xSmall);
+    display: flex;
+    font-weight: 700;
 }
